--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ lxml = {extras = ["html-clean"], version = "^5.3.0"}
 markdownify = "^0.14.1"
 websockets = "^14.1"
 motor = "^3.6.0"
+html2text = "^2024.2.26"
 
 
 [build-system]
