--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,10 @@ markdownify = "^0.14.1"
 websockets = "^14.1"
 motor = "^3.6.0"
 html2text = "^2024.2.26"
+rank-bm25 = "^0.2.2"
+elasticsearch = "^8.16.0"
+pyjwt = "^2.10.1"
+bcrypt = "^4.2.1"
 
 
 [build-system]
