--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@ __pycache__/
 **/__pycache__/
 .env
 .idea/
-app/flows/__pycache__/
+app/code_process/__pycache__/
 app/templates/__pycache__/
 data/*
 *.pyc
