--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,8 @@ rank-bm25 = "^0.2.2"
 elasticsearch = "^8.16.0"
 pyjwt = "^2.10.1"
 bcrypt = "^4.2.1"
+langchain-ollama = "^0.2.2"
+pydantic-ai = "^0.0.15"
 
 
 [build-system]
