--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,7 @@ pyjwt = "^2.10.1"
 bcrypt = "^4.2.1"
 langchain-ollama = "^0.2.2"
 pydantic-ai = "^0.0.15"
+cryptography = "^44.0.0"
 
 
 [build-system]
