--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,8 @@ bcrypt = "^4.2.1"
 langchain-ollama = "^0.2.2"
 pydantic-ai = "^0.0.15"
 cryptography = "^44.0.0"
+scikit-learn = "^1.6.1"
+plotly = "^5.24.1"
 
 
 [build-system]
