--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,7 @@ pydantic-ai = "^0.0.15"
 cryptography = "^44.0.0"
 scikit-learn = "^1.6.1"
 plotly = "^5.24.1"
+cohere = "^5.13.11"
 
 
 [build-system]
