--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,7 @@ cryptography = "^44.0.0"
 scikit-learn = "^1.6.1"
 plotly = "^5.24.1"
 cohere = "^5.13.11"
+dependency-injector = "^4.45.0"
 
 
 [build-system]
