--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,6 +38,7 @@ scikit-learn = "^1.6.1"
 plotly = "^5.24.1"
 cohere = "^5.13.11"
 dependency-injector = "^4.45.0"
+python-telegram-bot = "^21.10"
 
 
 [build-system]
