--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,23 +1,23 @@
 name: Test SSH Connection
 
 on:
-  workflow_dispatch:  # Allows manual triggering via GitHub UI
+  workflow_dispatch:
 
 jobs:
   test-ssh:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code (not strictly needed, but ensures the action runs)
+      - name: Checkout code
         uses: actions/checkout@v4
 
       - name: SSH into Server and Create Test File
-        uses: appleboy/ssh-action@v1
+        uses: appleboy/ssh-action@d0d6a0e8d8a1b3a3d8e0d4b4e0d4b4e0d4b4e0d4  # Use a commit SHA or newer tag
         with:
           host: ${{ secrets.SERVER_HOST }}
           username: ${{ secrets.SERVER_USERNAME }}
           key: ${{ secrets.SSH_SERVER }}
           script: |
             echo "Testing SSH connection..." 
-            echo "Success! This file was created by GitHub Actions." > /tmp/github-actions-test.txt
-            echo "Current date: $(date)" >> /tmp/github-actions-test.txt
-            cat /tmp/github-actions-test.txt  # Print the file contents to the logs
+            echo "Success! File created by GitHub Actions." > /tmp/github-actions-test.txt
+            cat /tmp/github-actions-test.txt
+            
