--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,23 +1,25 @@
-name: Test SSH Connection
+name: Build, Push, and Deploy
 
 on:
-  workflow_dispatch:
+  push:
+    branches:
+      - master  
 
 jobs:
-  test-ssh:
+  deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: SSH into Server and Create Test File
-        uses: appleboy/ssh-action@d0d6a0e8d8a1b3a3d8e0d4b4e0d4b4e0d4b4e0d4  # Use a commit SHA or newer tag
+      - name: SSH into server and update the container
+        uses: appleboy/ssh-action@v1
         with:
           host: ${{ secrets.SERVER_HOST }}
           username: ${{ secrets.SERVER_USERNAME }}
           key: ${{ secrets.SSH_SERVER }}
           script: |
-            echo "Testing SSH connection..." 
-            echo "Success! File created by GitHub Actions." > /tmp/github-actions-test.txt
-            cat /tmp/github-actions-test.txt
-            
+            # Pull the new image (replace 'myapp' with your image name)
+            docker pull ${{ secrets.DOCKERHUB_USERNAME }}/myapp:${{ github.sha }}
+            # Stop and remove the old container
+            docker stop myapp || true
+            docker rm myapp || true
+            # Run the new container (adjust ports/volumes as needed)
+            docker run -d --name myapp -p 80:80 ${{ secrets.DOCKERHUB_USERNAME }}/myapp:${{ github.sha }}
