--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,6 +6,26 @@ on:
       - master  
 
 jobs:
+  build-and-push:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          push: true
+          tags: |
+            ${{ secrets.DOCKERHUB_USERNAME }}/remora-backend:latest
+            ${{ secrets.DOCKERHUB_USERNAME }}/remora-backend:${{ github.sha }}
   deploy:
     runs-on: ubuntu-latest
     steps:
@@ -16,6 +36,7 @@ jobs:
           username: ${{ secrets.SERVER_USERNAME }}
           key: ${{ secrets.SSH_SERVER }}
           script: |
-            echo "Testing SSH connection..." 
-            echo "Success! File created by GitHub Actions." > /tmp/github-actions-test.txt
-            cat /tmp/github-actions-test.txt
+            cd docker
+            sudo docker pull ${{ secrets.DOCKERHUB_USERNAME }}/remora-backend:latest
+            sudo docker compose down
+            sudo docker compose up -d
