--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -38,6 +38,6 @@ jobs:
           key: ${{ secrets.SSH_SERVER }}
           script: |
             cd docker
-            sudo docker pull ${{ secrets.DOCKERHUB_USERNAME }}/remora-backend:latest
-            sudo docker compose down
-            sudo docker compose up -d
+            docker pull ${{ secrets.DOCKERHUB_USERNAME }}/remora-backend:latest
+            docker compose down
+            docker compose up -d
