--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,6 +12,13 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      # Create .env file from the secret
+      - name: Create .env file
+        run: |
+          cat << EOF > .env
+          ${{ secrets.ENV_FILE }}
+          EOF
+
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
