--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,7 +15,8 @@ jobs:
       # Create .env file from the secret
       - name: Create .env file
         run: |
-          cat << EOF > .env
+          mkdir -p app  # Ensure the "app" folder exists
+          cat << EOF > app/.env
           ${{ secrets.ENV_FILE }}
           EOF
 
