--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,12 +13,8 @@ jobs:
         uses: actions/checkout@v4
 
       # Create .env file from the secret
-      - name: Create .env file
-        run: |
-          mkdir -p app  # Ensure the "app" folder exists
-          cat << EOF > app/.env
-          ${{ secrets.ENV_FILE }}
-          EOF
+      - name: Create .env file in app folder
+        run: echo "${{ secrets.ENV_FILE }}" > ./app/.env
 
       - name: Login to Docker Hub
         uses: docker/login-action@v3
