--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,8 +13,12 @@ jobs:
         uses: actions/checkout@v4
 
       # Create .env file from the secret
-      - name: Create .env file in app folder
-        run: echo "${{ secrets.ENV_FILE }}" > ./app/.env
+      - name: Create .env file
+        run: |
+          mkdir -p ./app  # Ensure directory exists
+          cat <<EOF > ./app/.env
+          ${{ secrets.ENV_FILE }}
+          EOF
 
       - name: Login to Docker Hub
         uses: docker/login-action@v3
