--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,6 +20,10 @@ jobs:
           ${{ secrets.ENV_FILE }}
           EOF
 
+      - name: Verify .env file
+        run: ls -la ./app/.env
+
+
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
